[package]
name = "screentime"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0.97"
active-win-pos-rs = "0.8.1"
dirs = "5.0.1"
jammdb = "0.10.0"
serde = { version = "1.0.164", features = ["derive"] }
chrono = "0.4.26"
rmp-serde = "1.1.1"
rdev = "0.5.2"
single_value_channel = "1.2.2"
axum = { git = "https://github.com/tokio-rs/axum" }
